Added overlays to the js examples

--- a/examples/js/index.html
+++ b/examples/js/index.html
@@ -166,6 +166,26 @@
 		
 		<!-- Projects Row -->
 		<div class="row">
+			<div class="col-md-4 portfolio-item">
+				<h3>
+					<a href="#">Scene with overlay</a>
+				</h3>
+				<p>Sample image of a single overlay applied to a scene</p>
+				<img id="singleOverlay" class="img-responsive" src="http://placehold.it/700x400" alt="Scene with overlay" title="Scene with overlay" />
+			</div>
+			<div class="col-md-4 portfolio-item">
+				<h3>
+					<a href="#">Scene with multiple overlays</a>
+				</h3>
+				<p>Sample image of multiple overlays applied to a scene</p>
+				<img id="multipleOverlay" class="img-responsive" src="http://placehold.it/700x400" alt="Scene with multiple overlays" title="Scene with multiple overlays" />
+			</div>
+		
+		</div>
+		<!-- /.row -->
+		
+		<!-- Projects Row -->
+		<div class="row">
 			<div class="col-md-10 portfolio-item">
 				<h3>
 					<a href="#">Scene coordinates</a>
