Added text rendering to c# and js demo's

--- a/examples/js/index.html
+++ b/examples/js/index.html
@@ -186,6 +186,18 @@
 		
 		<!-- Projects Row -->
 		<div class="row">
+			<div class="col-md-4 portfolio-item">
+				<h3>
+					<a href="#">Scene with text</a>
+				</h3>
+				<p>Sample image of text applied to a scene</p>
+				<img id="text" class="img-responsive" src="http://placehold.it/700x400" alt="Scene with text" title="Scene with text" />
+			</div>		
+		</div>
+		<!-- /.row -->
+		
+		<!-- Projects Row -->
+		<div class="row">
 			<div class="col-md-10 portfolio-item">
 				<h3>
 					<a href="#">Scene coordinates</a>
