--- a/examples/js/PicarioXPO.BabylonSDK/index.html
+++ b/examples/js/PicarioXPO.BabylonSDK/index.html
@@ -16,8 +16,8 @@
 	<script src="Scripts/hand-1.3.7.js"></script>
     <script src="http://www.babylonjs.com/cannon.js"></script>
     <script src="http://www.babylonjs.com/oimo.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/babylonjs/2.5.0/babylon.js"></script>
 	
+	<script src="Scripts/babylon3.1.js"></script>
 	<script src="Scripts/PicarioXPO.BabylonSDK.js"></script>
 	<script src="Scripts/index.js"></script>
 </head>
